# CNC-Machinery

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  playwright.config.ts
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  auth_cargo_additions.toml  cargo_deps_additions.toml
backend/.sqlx/: query-0277815a0ff066664056553e9fad3a73e566c70d228247192d618bc7c855ca79.json  query-0a020b99a0785ba16d67055301855b2859e0d605667285931684222df8e40baa.json  query-0b9d9fb8e24205f1862cf6845470a5ae1697e468ba07780442c361f95018eccb.json  query-0eb3abc57ebfda99fc374eb73b228ad64552ad9edec9d0a1895016164f3cf17c.json  query-11f576c7de5fe0f03f7fd2b954d9afe9bf9e1396ac64c2079241bb37b188f6e3.json  query-1294adaf3734fc90b6857e67417d2b2a878da62320ddd6ab9e55d18c3d91e606.json  query-147ac90af8e0c6c7c922791d4ef667ee69943b73016ad95b507a3ebe28a7d6dc.json  query-15aaeafef7f44ac2cccda71a89d6158c950ecb0d09a18c291b1a7874d93771d4.json  query-16e4e689c356355372c03a72167db45d9cb76a6938c95ef227c70c00bd843792.json  query-172e9143c01f7195a8fffdb6898729558d6028ea59b8b791f73072f7d3a650fa.json  query-17973b2970aa6f0b619cc3b1d793adcccb1399e77b06a39e7a2422bb71461189.json  query-1d9737c677e3515d1fff042e02721a910679362e66254df236b1efcf8e097c17.json  query-1eb0da91693386017a54564b3b1f06ce691ee4e991bd93a26190d0aeaec80ef6.json  query-2053665c5141d927c6754114d4b36854bc38dc9fb5ad08d1c87fca92e402c51e.json  query-2377b183468fe1245513b9d9e062f9dd6ae2508b22dcc152e0ca1145679d7fe5.json  query-275687d98e7971e7f394674bfae402370922239ca0bb3f92cd9c3a4ce7b688ab.json  query-35dbe18d255037d005a6d47dc6a39082fe31652e2fa6fa8a14e60ea27f435d00.json  query-366483c257949c222b52c08e61bbec076feae8503d5140d79ee62ac250742ea8.json  query-3889a4e7bf44b22ecbaa7cc4097096a969832f9a6755122682ba02b6a9fd32d2.json  query-3aa91d4dc598f1c6f377b9ff3fd0a1ede58ac50e9ccbb05e98588ca69a19aeae.json  query-3dac65ca5fb302417ad0a609f8602e18ba39b4521324bda7487eba98d32726b1.json  query-3f73c17de1f16874d56b5f7b6ac4397c78551a161afe38fd050cf5788254f7a4.json  query-40a77e2c832d505ed4099155340dcee71177430e7abb5ce3528021c353f98514.json  query-4374268c1e48abbe246ab16f95da7985d678183bfdb589414b5693aaa930682e.json  query-4521a35c5e595cf693943793e76f9e3ccd097a3a80735e936ff04e1c8aead1cf.json  query-45b868899828d65db07df582f932fb07f13382b0cdb44019c10f7f0e60735e53.json  query-45e643fc540dd8fbd71469ba1bf9582d967a879026b3c0ecada13d8466063765.json  query-46854ff5bffb920e518e3c1284cd49d155e0636fa3037e3af2cc437a9f6d1e27.json  query-47689ec720669687fd296ad34ce2a3be3f65b7f3b755629a09363d7fcc3ff35c.json  query-4f7fea81b9948c020b02833a3baf0eb5e70b53dbc2c80531da3207d1b8cb1cca.json  query-515b8817aa9de329c762e7bc94e42ec14b89ef97a77e329a9f7e19c69de03dea.json  query-52a15643397f76063da5585074c0bf6e706fe2f5ab38a08caa901df0150743db.json  query-55393900ebb9c4a31b6a8074fe235c89c8f19a60866b6c3949e0f53c09c3d286.json  query-5552871538a79ee4d40179de46da1b7a33a6e187fe4d4ccdfd0e349bd90a44b2.json  query-56ee397efe35885a2ecd07c3e763db8e975391293593386c18cdeae61b0f0931.json  query-58c13ecf408299169d98d5d4923834eaec959a9bd5f071c41c16b29b268f1e18.json  query-5ec24cfc0a9da9e6ca9cd68f0c4ee3846c895ae7fc67360d86363b40178c58ca.json  query-60d6f27b4748cac0922ee301bb30b4f004a943c8ccac17e54a03ee93978d3965.json  query-61eea8507310a8c3f5826af0b9d6a611a28d7eae68f9e5868ece59193e82aeb8.json  query-63ad4d4f9a317aec0a28a4519804bd5c270fa0f37addd710c463c5ce71ef1b5b.json  (+78 more)
backend/seed/: seed.sql
backend/src/: lib.rs  main.rs
backend/src/api/: construction_methods.rs  (+24 more)
backend/tests/: api_crud_tests_batch1.rs  api_crud_tests_batch2.rs  api_crud_tests_batch3.rs  api_integration.rs  gcode_api_tests.rs  gcode_generator_tests.rs  seed_test.rs
(+375 files in other folders)
