[package]
name = "cabinet-cnc-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "cnc_backend"

[[bin]]
name = "cabinet-cnc-backend"
path = "src/main.rs"

[[bin]]
name = "seed_runner"
path = "src/bin/seed_runner.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres","runtime-tokio-rustls","uuid","chrono","migrate","json","bigdecimal"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
# G-code parsing/validation library (we write our own emission logic)
gcode = { version = "0.6", features = ["std"] }
# Template variable substitution for post-processor templates
regex = "1"

# Auth & security
jsonwebtoken = "9"
argon2 = "0.5"
actix-web-httpauth = "0.8"

# Caching (Redis)
redis = { version = "0.25", features = ["tokio-comp"] }

# Object storage (S3 / MinIO)
aws-sdk-s3 = "1"
aws-config = "1"

# Multipart uploads & WebSocket support
actix-multipart = "0.7"
actix-web-actors = "4"

# Async utilities (used by middleware)
futures = "0.3"
futures-util = "0.3"

# Actor system (WebSocket)
actix = "0.13"

# Seed runner CLI
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
indicatif = "0.17"
dotenvy = "0.15"

[dev-dependencies]
actix-rt = "2"
actix-web = { version = "4", features = ["macros"] }
serde_json = "1"
