[package]
name = "cnc-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cnc_backend"
path = "src/main.rs"

[lib]
name = "cnc_backend"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
env_logger = "0.11"
log = "0.4"
dotenvy = "0.15"

# Auth & security
argon2 = "0.5"
bcrypt = "0.15"
thiserror = "1"

# WebSocket support
actix = "0.13"
actix-web-actors = "4"

# Async utilities (used by middleware)
futures-util = "0.3"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
